--- a/index.html
+++ b/index.html
@@ -45,16 +45,35 @@
     <main>
         <div class="books">
             <div>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/718ReYbwlFL.jpg" alt="" class="book-img">
+                <img src="https://xatimg.com/image/qiTZzAHNsWjF.png" alt="" class="book-img">
             </div>
             <div class="descp">
-                <h2 class="book-name">After You</h2>
-                <h3 class="author">by Jojo Myoes</h3>
-                <h3 class="rating">1.987 rating</h3>
+                <h2 class="book-name">January</h2>
+                <h3 class="author">power released</h3>
+                <h3 class="rating">43 powers</h3>
                 <p class="info">
                     It continues the story of Louisa Clark after Will's death. She is trying to move on. 
                 </p>
-                <button type="submit">See the Book</button>
+
+
+              <div class="container">
+        <h2>List with Titles and Images</h2>
+        <ul>
+            <li>
+                <img src="example1.jpg" alt="Image 1">
+                <h3>Title 1</h3>
+            </li>
+            <li>
+                <img src="example2.jpg" alt="Image 2">
+                <h3>Title 2</h3>
+            </li>
+            <li>
+                <img src="example3.jpg" alt="Image 3">
+                <h3>Title 3</h3>
+            </li>
+            <!-- Add more list items as needed -->
+        </ul>
+    </div>
             </div>
         </div>
 
