--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
         <h2>List with Titles and Images</h2>
         <ul>
             <li>
-                <img src="example1.jpg" alt="Image 1">
+                <img src="https://xatimg.com/image/05wWWlGOxHR1.jpg" alt="Image 1">
                 <h3>Title 1</h3>
             </li>
             <li>
-                <img src="example2.jpg" alt="Image 2">
+                <img src="https://xatimg.com/image/05wWWlGOxHR1.jpg" alt="Image 2">
                 <h3>Title 2</h3>
             </li>
             <li>
-                <img src="example3.jpg" alt="Image 3">
+                <img src="https://xatimg.com/image/05wWWlGOxHR1.jpg" alt="Image 3">
                 <h3>Title 3</h3>
             </li>
             <!-- Add more list items as needed -->
