--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h3 class="author">power released</h3>
                 <h3 class="rating">43 powers</h3>
                 <p class="info">
-                    It continues the story of Louisa Clark after Will's death. She is trying to move on. 
+                    See all the powers released this month over the years until today
                 </p>
 
 
@@ -60,15 +60,15 @@
         <h2>List with Titles and Images</h2>
         <ul>
             <li>
-                <img src="https://xatimg.com/image/05wWWlGOxHR1.jpg" alt="Image 1">
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
                 <h3>Title 1</h3>
             </li>
             <li>
-                <img src="https://xatimg.com/image/05wWWlGOxHR1.jpg" alt="Image 2">
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 2">
                 <h3>Title 2</h3>
             </li>
             <li>
-                <img src="https://xatimg.com/image/05wWWlGOxHR1.jpg" alt="Image 3">
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 3">
                 <h3>Title 3</h3>
             </li>
             <!-- Add more list items as needed -->
@@ -82,14 +82,32 @@
                 <img src="https://images-na.ssl-images-amazon.com/images/I/91JxVjINNsL.jpg" alt="" class="book-img">
             </div>
             <div class="descp">
-                <h2 class="book-name">Big Magic</h2>
-                <h3 class="author">by Elizabeth Gilbert</h3>
-                <h3 class="rating">1.987 rating</h3>
+                <h2 class="book-name">February</h2>
+                <h3 class="author">power released</h3>
+                <h3 class="rating">43 powers</h3>
                 <p class="info">
-                    Readers of all ages and walks of life have drawn inspiration from Elizabeth
-                    Gilbert’s books.
+                    See all the powers released this month over the years until today
                 </p>
-                <button type="submit" id="b1">See the Book</button>
+
+               <div class="container">
+        <h2>List with Titles and Images</h2>
+        <ul>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Title 1</h3>
+            </li>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 2">
+                <h3>Title 2</h3>
+            </li>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 3">
+                <h3>Title 3</h3>
+            </li>
+            <!-- Add more list items as needed -->
+        </ul>
+    </div>
+              
             </div>
         </div>
 
@@ -98,14 +116,30 @@
                 <img src="https://images-na.ssl-images-amazon.com/images/I/9129dzchsGL.jpg" alt="" class="book-img">
             </div>
             <div class="descp">
-                <h2 class="book-name">A Tale for the Time Being</h2>
-                <h3 class="author">by Ruth Ozeki</h3>
-                <h3 class="rating">1.987 rating</h3>
+                <h2 class="book-name">March</h2>
+                <h3 class="author">power released</h3>
+                <h3 class="rating">43 powers</h3>
                 <p class="info">
-                    In Tokyo, sixteen-year-old Nao has decided there’s only one escape from her aching loneliness
-                    
+                    See all the powers released this month over the years until today
                 </p>
-                <button type="submit" id="b2">See the Book</button>
+                 <div class="container">
+        <h2>List with Titles and Images</h2>
+        <ul>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Title 1</h3>
+            </li>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 2">
+                <h3>Title 2</h3>
+            </li>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 3">
+                <h3>Title 3</h3>
+            </li>
+            <!-- Add more list items as needed -->
+        </ul>
+    </div>
             </div>
         </div>
 
@@ -115,13 +149,30 @@
                     alt="" class="book-img">
             </div>
             <div class="descp">
-                <h2 class="book-name">The Great Gatsby</h2>
-                <h3 class="author">by F. Scott Fitzgerald</h3>
-                <h3 class="rating">1.987 rating</h3>
+                <h2 class="book-name">April</h2>
+                <h3 class="author">power released</h3>
+                <h3 class="rating">43 powers</h3>
                 <p class="info">
-                    The novel was inspired by a youthful romance Fitzgerald had with socialite Ginevra King 
+                    See all the powers released this month over the years until today
                 </p>
-                <button type="submit" id="b3">See the Book</button>
+                 <div class="container">
+        <h2>List with Titles and Images</h2>
+        <ul>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Title 1</h3>
+            </li>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 2">
+                <h3>Title 2</h3>
+            </li>
+            <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 3">
+                <h3>Title 3</h3>
+            </li>
+            <!-- Add more list items as needed -->
+        </ul>
+    </div>
             </div>
         </div>
 
