--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
+<html lang="en" data-lt-installed="true"><head>
   <meta charset="UTF-8">
   <title>CodePen - Online Book Store</title>
   <link rel="stylesheet" href="./style.css">
@@ -8,10 +6,10 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
+
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,27 +18,16 @@
 
     <!-- Fonts...... -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&amp;display=swap" rel="stylesheet">
 
     <!-- Google icons  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
 
-<body>
-    <nav class="nav-bar">
-        <div class="nav1">
-            <a href="">Browse Categories</a>
-            <input type="text" id="search_book" placeholder="Search Book">
-        </div>
-        <h3>readbooks</h3>
-        <div class="icon-about">
-            <i class="material-icons"><span class="material-icons-outlined">account_circle</span></i>
-            <a href="">About-Us</a>
-        </div>
 
-    </nav>
+
+    
 
     <main>
         <div class="books">
@@ -145,8 +132,7 @@
 
         <div class="books">
             <div>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/81djg0KWthS.jpg"
-                    alt="" class="book-img">
+                <img src="https://images-na.ssl-images-amazon.com/images/I/81djg0KWthS.jpg" alt="" class="book-img">
             </div>
             <div class="descp">
                 <h2 class="book-name">April</h2>
@@ -178,10 +164,11 @@
 
     </main>
 
-</body>
 
-</html>
-<!-- partial -->
+
+
+
   
-</body>
-</html>
+
+
+</body></html>
