--- a/index.html
+++ b/index.html
@@ -48,7 +48,103 @@
         <ul>
             <li>
                 <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
-                <h3>Title 1</h3>
+                <h3>Power name</h3>
+            </li>
+           <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li>
+           <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li>
+           <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
             </li>
             <li>
                 <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 2">
@@ -66,7 +162,7 @@
 
         <div class="books">
             <div>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/91JxVjINNsL.jpg" alt="" class="book-img">
+                <img src="https://xatimg.com/image/qiTZzAHNsWjF.png" alt="" class="book-img">
             </div>
             <div class="descp">
                 <h2 class="book-name">February</h2>
@@ -87,6 +183,127 @@
                 <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 2">
                 <h3>Title 2</h3>
             </li>
+           <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li> <li>
+                <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 1">
+                <h3>Power name</h3>
+            </li>
             <li>
                 <img src="https://xatimg.com/image/w6l9shcMIztE.gif" alt="Image 3">
                 <h3>Title 3</h3>
@@ -100,7 +317,7 @@
 
         <div class="books">
             <div>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/9129dzchsGL.jpg" alt="" class="book-img">
+                <img src="https://xatimg.com/image/qiTZzAHNsWjF.png" alt="" class="book-img">
             </div>
             <div class="descp">
                 <h2 class="book-name">March</h2>
@@ -132,7 +349,7 @@
 
         <div class="books">
             <div>
-                <img src="https://images-na.ssl-images-amazon.com/images/I/81djg0KWthS.jpg" alt="" class="book-img">
+                <img src="https://xatimg.com/image/qiTZzAHNsWjF.png" alt="" class="book-img">
             </div>
             <div class="descp">
                 <h2 class="book-name">April</h2>
